Remove legacy api mapping
