# web6/src/api/api_autogen.go
@@ -10,6 +10,7 @@ import (
 	"io"
 	"log"
 	"net/http"
+	"strings"
 )
 
 func (h *HttpServer) ApiHandler(w http.ResponseWriter, r *http.Request) {
@@ -23,29 +24,9 @@ func (h *HttpServer) ApiHandler(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	currentMethod := r.URL.Path
+	path := strings.Replace(r.URL.Path, "/api/", "/twirp/", 1)
 
-	var methodsMap = map[string]string{
-		"/api/posts.add":        "/twirp/meme.api.Posts/Add",
-		"/api/posts.list":       "/twirp/meme.api.Posts/List",
-		"/api/posts.delete":     "/twirp/meme.api.Posts/Delete",
-		"/api/posts.like":       "/twirp/meme.api.Posts/Like",
-		"/api/users.list":       "/twirp/meme.api.Users/List",
-		"/api/users.setStatus":  "/twirp/meme.api.Users/SetStatus",
-		"/api/users.follow":     "/twirp/meme.api.Users/Follow",
-		"/api/auth.login":       "/twirp/meme.api.Auth/Login",
-		"/api/auth.register":    "/twirp/meme.api.Auth/Register",
-		"/api/auth.vk":          "/twirp/meme.api.Auth/Vk",
-		"/api/polls.add":        "/twirp/meme.api.Polls/Add",
-		"/api/polls.list":       "/twirp/meme.api.Polls/List",
-		"/api/polls.vote":       "/twirp/meme.api.Polls/Vote",
-		"/api/polls.deleteVote": "/twirp/meme.api.Polls/DeleteVote",
-		"/api/bookmarks.Add":    "/twirp/meme.api.Bookmarks/Add",
-		"/api/bookmarks.Remove": "/twirp/meme.api.Bookmarks/Remove",
-		"/api/bookmarks.List":   "/twirp/meme.api.Bookmarks/List",
-	}
-
-	apiReq, _ := http.NewRequest("POST", "http://localhost:8002"+methodsMap[currentMethod], r.Body)
+	apiReq, _ := http.NewRequest("POST", "http://localhost:8002"+path, r.Body)
 	apiReq.Header.Set("Content-Type", "application/json")
 	apiReq.Header.Set("Authorization", r.Header.Get("Authorization"))
 
